# Bugs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
core-skills/: code-review.md
docs/素材/: 对科幻虫族的了解.md  对超神学院三大天体制计算机的了解.md
docs/设计/: 00-目录.md
docs/设计/第一部分：概念与哲学/: 01-项目定位.md  02-设计哲学.md  03-特性清单.md
docs/设计/第三部分：核心模块/: 13-调度引擎设计.md  14-浏览器工具设计.md  15-工具集设计.md  16-信任引擎设计.md  17-场景切换设计.md  18-冥想系统.md
docs/设计/第二部分：总体架构/: 04-Agent角色.md  05-Agent权限控制设计.md  06-记忆架构.md  07-文件体系.md  08-平台与前端.md  09-连接方式.md  10-架构图.md  11-API设计.md  12-配置文件格式.md
docs/设计/第五部分：生态与兼容/: 20-模块扩展机制.md  21-竞品兼容设计.md  22-竞品深度分析.md  23-工具扩展接口.md  24-生态市场与分发.md
docs/设计/第六部分：技术决策/: 25-技术栈待定.md  26-源码结构.md  27-核心类型定义.md  28-Cargo依赖清单.md  29-Provider集成设计.md  30-进程模型与部署.md  31-错误类型体系.md  32-版本控制.md  33-定时任务与心跳.md  35-进程vs协程分析.md  36-进程隔离方案.md  37-脑虫意识与容醒机制.md  38-OpenClaw借鉴.md
docs/设计/第四部分：存储与安全/: 18-数据持久化设计.md  19-安全设计.md
docs/说明/: 场景说明.md  开始使用.md  术语表.md
modules/browser/: Cargo.toml  bugmod.toml
modules/browser/src/: behavior.rs  captcha.rs  download.rs  lib.rs  search.rs  stealth.rs
modules/gui/: Cargo.toml  bugmod.toml
modules/gui/src/: lib.rs  main.rs
modules/models/: Cargo.toml  bugmod.toml
modules/models/src/: alibaba.rs  anthropic.rs  baichuan.rs  byteplus.rs  cohere.rs  deepseek.rs  google.rs  lib.rs  minimax.rs  moonshot.rs  openai.rs  qianfan.rs  stepfun.rs  tencent.rs  zhipu.rs
modules/web/: Cargo.toml  bugmod.toml
modules/web/src/: lib.rs  main.rs
modules/web/static/: app.js  index.html  style.css
modules/weixin/: Cargo.toml  bugmod.toml
modules/weixin/src/: crypto.rs  lib.rs  main.rs  message.rs  qr.rs  server.rs
release/2026.05.27-dev-1/: RELEASE.md
scripts/: bugs.service  install.sh
src/api/: Cargo.toml  version.txt
src/api/src/: lib.rs  main.rs  middleware.rs  routes.rs  schema.rs  tests.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs  tests.rs
src/core/: Cargo.toml
src/core/src/: agent.rs  browser.rs  config.rs  hotreload.rs  lib.rs  lsp.rs  mcp.rs  meditate.rs  memory.rs  models.rs  module.rs  persistence.rs  scene.rs  security.rs  skill.rs  tools.rs  trust.rs  types.rs
src/core/src/scheduler/: cron.rs  mod.rs
src/tui/: Cargo.toml
src/tui/src/: app.rs  i18n.rs  main.rs  tests.rs  ui.rs
