[package]
name = "bugs-browser"
version.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
bugs-core = { path = "../../src/core" }
async-trait = "0.1"
headless_chrome = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "2.2"
