[package]
name = "bugs-gui"
version.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
egui = "0.29"
eframe = "0.29"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
