[package]
name = "bugs-models"
version.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
bugs-core = { path = "../../src/core" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tokio-stream = "0.1"
