[package]
name = "bugs-weixin"
version.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
bugs-core = { path = "../../src/core" }
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json"] }
sha1 = "0.10"
hex = "0.4"
chrono = "0.4"
rand = "0.8"
quick-xml = { version = "0.36", features = ["serialize"] }
qrcode = "0.14"
parking_lot = "0.12"
base64 = "0.22"

[[bin]]
name = "bugs-weixin"
path = "src/main.rs"
