[package]
name = "bugs-api"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"

[dependencies]
bugs-core = { path = "../core" }
bugs-models = { path = "../../modules/models" }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
