[package]
name = "bugs"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"

[[bin]]
name = "bugs"
path = "src/main.rs"

[dependencies]
bugs-core = { path = "../core" }
bugs-models = { path = "../../modules/models" }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
