[package]
name = "bugs-core"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
redb = "2"
hnsw_rs = "0.3"
zstd = { version = "0.13", features = ["zstdmt"] }
headless_chrome = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-tungstenite = "0.24"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
parking_lot = "0.12"
json5 = "0.4"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-stream = "0.1"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
